Implement Loops email service integration with various email templates and update AuthController for OTP and welcome email functionality. Add JWT authentication support and configure necessary environment variables.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "league/csv": "^9.26",
-        "ramsey/uuid": "^4.9"
+        "ramsey/uuid": "^4.9",
+        "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
